_docs/v0.28/administration-guide/12-public-links.md
---
version: v0.28
category: Administration-Guide
title: '12 Public Links'
source_url: 'https://github.com/metabase/metabase/blob/master/docs/administration-guide/12-public-links.md'
layout: docs
---

## Sharing and embedding dashboards or questions
Sometimes you'll want to share a dashboard or question you've saved with someone that isn't a part of your organization or company, or someone who doesn't need access to your full Metabase instance. Metabase lets administrators create public links and simple embeds to let you do just that.

### Turning public links on
![Enable public sharing](images/public-links/enable-public-sharing.png)
First things first, you'll need to go to the Admin Panel and enable public sharing. In the future, you'll see dashboards and questions you've shared listed here, and you'll be able to revoke any public links that you no longer want to be used.

### Enable sharing on your dashboard or saved question
![Enable sharing](images/public-links/enable-links.png)
Next, exit the Admin Panel and go to the dashboard or question that you want to share, then click on the `Sharing and Embedding` icon in the top-right of the screen (it looks like a box with an arrow pointing up). Then click on the toggle to enable public sharing for this dashboard or question.

### Copy, paste, and share!
Now just copy and share the public link URL with whomever you please. If you want to embed your dashboard or question in a simple web page or blog post, then copy and paste the iframe snippet to your destination of choice.

If you're trying to do more complex, integrated embedding in your own web application, then you can check out the [documentation for that feature](13-embedding.html).
